# bild

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  TODO.md
auth/: Cargo.toml
auth/src/: main.rs
server/: Cargo.toml
server/src/: api_key.rs  convert_image.rs  converter.rs  fairings.rs  garbage.rs  gen.rs  guards.rs  main.rs  routes.rs  types.rs  util.rs
server/src/error_pages/: 500.html
server/static/404/: index.html
server/static/common/: styles.css  utils.js
server/static/delete/: index.html
server/static/upload/: index.html  main.css  script.js
src/: convert_image.rs  gen.rs  main.rs  routes.rs
src/error_pages/: 404.html  429.html  500.html
static/index/: index.html  main.css
