[package]
name = "image-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
rocket-governor = "0.1.0-rc.4"
serde = { version = "1.0.144", features = ["derive"] }
webp = "0.2.2"
