[package]
name = "bild-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.144", features = ["derive"] }
